cursorsource: fix scaling with Xwayland

Before this commit, the device pixel ratio of the cursor was set to ignore
the Xwayland scale override, while the size of the cursor surface was scaled.
This change removes the scaling of the cursor surface size, to make the cursor
be no longer cut off in rendering.

BUG: 466094


(cherry picked from commit 81571203f12c3fbd8c7cb8bc6446587a43d3895b)